--- a/index.html
+++ b/index.html
@@ -142,22 +142,36 @@ will be prosecuted to the maximum extent possible under law.
       <div class="ui-body ui-body-a ui-corner-all" id="page_navigation">
       </div>
 
-      <table align="right" class="logo">
-        <tr>
-          <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>webMUSHRA
-              <!-- build:template:dev
-              Dev
-              /build -->
-              <!-- build:template
-              <%= version %>
-              /build -->
-              by</strong></small>
-          </td>
-          <td class="logo"><a href="https://www.audiolabs-erlangen.de/"><img src="design/images/alabs_new.png" class="logo"/></a></td>
-          <td class="logo"><a href="http://www.iis.fraunhofer.de/"><img src="design/images/iis.svg" class="logo" /></a></td>
-          <td class="logo"><a href="https://www.fau.eu/"><img src="design/images/techfak.svg" class="logo" /></a></td>
-        </tr>
-      </table>
+      <div class="logo-container">
+        <table align="left" class="logo">
+          <tr>
+            <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>
+              Eine Kooperation der </strong></small>
+            </td>
+            <td class="logo"><a href="https://www.tugraz.at/"><img src="design/images/tu_graz.svg.png" class="logo"/></a></td>
+            <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>
+              mit </strong></small>
+            </td>
+            <td class="logo"><a href="https://www.meduniwien.ac.at/"><img src="design/images/muw.svg" class="logo"/></a></td>
+          </tr>
+        </table>
+        <table align="right" class="logo">
+          <tr>
+            <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>webMUSHRA
+                <!-- build:template:dev
+                Dev
+                /build -->
+                <!-- build:template
+                <%= version %>
+                /build -->
+                by</strong></small>
+            </td>
+            <td class="logo"><a href="https://www.audiolabs-erlangen.de/"><img src="design/images/alabs_new.png" class="logo"/></a></td>
+            <td class="logo"><a href="http://www.iis.fraunhofer.de/"><img src="design/images/iis.svg" class="logo" /></a></td>
+            <td class="logo"><a href="https://www.fau.eu/"><img src="design/images/techfak.svg" class="logo" /></a></td>
+          </tr>
+        </table>
+      </div>
 
     </div>
     <div data-role="popup" data-dismissible="false" data-history="false" data-transition="flip" positionTo="window" id="popupErrors">
