--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@ will be prosecuted to the maximum extent possible under law.
       <div class="ui-body ui-body-a ui-corner-all" id="page_navigation">
       </div>
 
+    </div>
+    <div data-role="popup" data-dismissible="false" data-history="false" data-transition="flip" positionTo="window" id="popupErrors">
+      <div id="popupErrorsContent">Errors:<br/></div>
+    </div>
+
+    <div data-role="popup" data-history="false" data-position-to="#page_content" data-transition="slidedown" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" class="ui-corner-all">
+      <div data-role="header" class="ui-corner-top"  style="width : 57.5em; background-color: #FFb500;">
+        <h1 id="popHeader"></h1>
+      </div>
+      <div id="popupResultsContent" style="background-color: white;" class="ui-corner-bottom ui-content">
+      </div>
+    </div>
+    <!-- build:js:generic startup.min.js -->
+    <script src="startup.js"></script>
+    <!-- /build -->
+
+    <footer>
       <div class="logo-container">
         <table align="left" class="logo">
           <tr>
@@ -172,21 +189,6 @@ will be prosecuted to the maximum extent possible under law.
           </tr>
         </table>
       </div>
-
-    </div>
-    <div data-role="popup" data-dismissible="false" data-history="false" data-transition="flip" positionTo="window" id="popupErrors">
-      <div id="popupErrorsContent">Errors:<br/></div>
-    </div>
-
-    <div data-role="popup" data-history="false" data-position-to="#page_content" data-transition="slidedown" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" class="ui-corner-all">
-      <div data-role="header" class="ui-corner-top"  style="width : 57.5em; background-color: #FFb500;">
-        <h1 id="popHeader"></h1>
-      </div>
-      <div id="popupResultsContent" style="background-color: white;" class="ui-corner-bottom ui-content">
-      </div>
-    </div>
-    <!-- build:js:generic startup.min.js -->
-    <script src="startup.js"></script>
-    <!-- /build -->
+    </footer>
   </body>
 </html>
